--- a/Proyecto/Regresion_en_Linea.lyx
+++ b/Proyecto/Regresion_en_Linea.lyx
@@ -326,5 +326,41 @@ Crear la estructura de la base de datos en LucidChart
 Crear el código SQL para la base de datos
 \end_layout
 
+\begin_layout Chapter
+Crear el Servidor DataSnap
+\end_layout
+
+\begin_layout Enumerate
+Crear el servidor DataSnap usando Delphi Rad Studio
+\end_layout
+
+\begin_layout Enumerate
+Probar el primer servicio en PostMan
+\end_layout
+
+\begin_layout Chapter
+Crear los servicios para usuarios
+\end_layout
+
+\begin_layout Enumerate
+Crear el método POST
+\end_layout
+
+\begin_layout Enumerate
+Crear el método GET
+\end_layout
+
+\begin_layout Enumerate
+Crear el método GET-ALL
+\end_layout
+
+\begin_layout Enumerate
+Crear el método PUT
+\end_layout
+
+\begin_layout Enumerate
+Crear el método DELETE
+\end_layout
+
 \end_body
 \end_document
