Terminada la clase 11

--- a/Proyecto/Regresion_en_Linea.lyx
+++ b/Proyecto/Regresion_en_Linea.lyx
@@ -394,5 +394,13 @@ Crear Modal de Mensaje
 Crear un modal y un servicio de dialogos para la aplicación
 \end_layout
 
+\begin_layout Chapter
+Página de Administrador
+\end_layout
+
+\begin_layout Enumerate
+Diseñar la página del adminsitrador
+\end_layout
+
 \end_body
 \end_document
